--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,15 @@
     <title>Home</title>
 </head>
 <body>
-    <div><h1>Home Page</h1></div>
-    <p>Hello, {{ name }}</p>
+    <div>
+        {% block content %}
+        <h1>Home Page</h1>
+        <p>Hello, {{ name }}</p>
+        {%endblock%}
+    </div>
+    
+    <script type="text/javascript" src="{{ url_for ('static', filename='index.js')}}"></script>
+    
     
 </body>
 </html>
